# task_tracker_GO_RUST

./: .gitignore  README.md
GoTaskTracker/: main.go
GoTaskTracker/tasks/: tasks.go
GoTaskTracker_COBRA/: go.mod  main.go
GoTaskTracker_COBRA/auth/: auth.go
GoTaskTracker_COBRA/models/: models.go
GoTaskTracker_COBRA/storage/: storage.go
GoTaskTracker_COBRA/tasks/: tasks.go
RustTaskTracker/: Cargo.toml
RustTaskTracker/src/: cli.rs  errors.rs  main.rs  task.rs
RustTaskTracker/src/entities/: mod.rs  session.rs  task.rs  user.rs
RustTaskTracker/src/repositories/: json_session_repository.rs  json_task_repository.rs  json_user_repository.rs  mod.rs
RustTaskTracker/src/services/: task_service.rs  user_service.rs
RustTaskTracker/src/traits/: Isession_repository.rs  Itask_repository.rs  Iuser_repository.rs  mod.rs
