[package]
name = "TaskTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rand = "0.8"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"

[[bin]]
name = "task-cli"
path = "./src/main.rs"
